closing file manager